# eom

./: CMakeLists.txt  main.cpp
resources/: Makefile  cog_menu.ui  compile-glade.sh  eom.glade  glade_compile.gresource  glade_compile.xml  resources.cpp
